--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -23,6 +23,9 @@
             <li>
                 <a href="/signup">Sign Up</a>
             </li>
+            <li>
+                <a href="/signin">Sign In</a>
+            </li>
             {% endif %}
 
         </ul>
